@@ -2293,10 +2293,6 @@ literal|false
 return|;
 try|try
 block|{
-name|tempSnapPuller
-operator|=
-name|snapPuller
-expr_stmt|;
 if|if
 condition|(
 name|masterUrl
@@ -2304,6 +2300,23 @@ operator|!=
 literal|null
 condition|)
 block|{
+if|if
+condition|(
+name|tempSnapPuller
+operator|!=
+literal|null
+operator|&&
+name|tempSnapPuller
+operator|!=
+name|snapPuller
+condition|)
+block|{
+name|tempSnapPuller
+operator|.
+name|destroy
+argument_list|()
+expr_stmt|;
+block|}
 name|NamedList
 argument_list|<
 name|Object
@@ -2335,6 +2348,13 @@ name|this
 argument_list|,
 name|core
 argument_list|)
+expr_stmt|;
+block|}
+else|else
+block|{
+name|tempSnapPuller
+operator|=
+name|snapPuller
 expr_stmt|;
 block|}
 return|return
@@ -6782,6 +6802,23 @@ literal|null
 condition|)
 block|{
 name|snapPuller
+operator|.
+name|destroy
+argument_list|()
+expr_stmt|;
+block|}
+if|if
+condition|(
+name|tempSnapPuller
+operator|!=
+literal|null
+operator|&&
+name|tempSnapPuller
+operator|!=
+name|snapPuller
+condition|)
+block|{
+name|tempSnapPuller
 operator|.
 name|destroy
 argument_list|()
